tests/paczka1/fuzzy1/38707278.err
Error in line 3: qqq315 A292 97,3
Error in line 17: S956 S956 17,4
Error in line 20: sf0CvLC15 S382 4,1
Error in line 14: tR3aiIS1J A292 29,6
